// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package foundation.providers.aws.iam;

option go_package = "namespacelabs.dev/foundation/providers/aws/iam";

message OpEnsureRole {
    string       role_name               = 1;
    string       description             = 2;
    string       assume_role_policy_json = 3;  // Serialized iam.PolicyDocument.
    repeated Tag tag                     = 4;
}

// XXX TODO
message OpAssociatePolicy {
    string role_name = 1;

    string       policy_name = 2;
    string       description = 3;
    string       policy_json = 4;  // Serialized iam.PolicyDocument.
    repeated Tag tag         = 5;
}

message Tag {
    string key   = 1;
    string value = 2;
}